--- a/style-D10.css
+++ b/style-D10.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@1,300&display=swap');
+
 body{
     background-color: rgb(53, 64, 158);
     text-align: center;
@@ -8,7 +10,8 @@ body{
 table{
     background-color: rgb(32, 86, 148);
     display: inline-table;
-    border-radius: 8pxyyy
+    border-radius: 8px;
+    border-color: green;
 }
 
 h1 {
